# CCD-Suite

./: .dockerignore  .env.example  .gitignore  package.json  pnpm-lock.yaml  railway.toml
.github/workflows/: ci.yml  codeql.yml
CCD SUITE LOGO/CCD SUITE LOGO/: ~$ANE AND CEESHAR DARK.html
apps/ai-services/: pyproject.toml  railway.toml
apps/ai-services/app/: config.py  main.py
apps/ai-services/app/clients/: __init__.py  anthropic_client.py  supabase_client.py
apps/ai-services/app/routers/: __init__.py  analyze.py  automation.py  chat.py  embed.py  generate.py  insights.py
apps/api-gateway/: package.json  railway.toml  tsconfig.json
apps/rust-services/: Cargo.toml
apps/rust-services/analytics-engine/: Cargo.toml
apps/rust-services/analytics-engine/src/: main.rs
apps/rust-services/file-processor/: Cargo.toml
apps/rust-services/file-processor/src/: main.rs
apps/rust-services/realtime-gateway/: Cargo.toml
apps/rust-services/realtime-gateway/src/: main.rs
apps/web/: .gitignore  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
docker/: Dockerfile.ai-services  Dockerfile.analytics-engine  Dockerfile.api-gateway  Dockerfile.file-processor  Dockerfile.realtime-gateway  Dockerfile.rust-services  docker-compose.yml
scripts/: setup-admin.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 00001_extensions.sql  00002_tenants.sql  00003_users_profiles.sql  00004_user_types.sql  00005_rls_policies.sql  00006_crm_schema.sql  00007_projects_schema.sql  00008_content_schema.sql  00009_analytics_schema.sql  00010_notifications_schema.sql  00011_storage_buckets.sql  00012_finance_schema.sql  00013_hr_schema.sql  00014_seo_schema.sql  00015_social_schema.sql  00016_client_portal_schema.sql  00017_ai_schema.sql  00018_admin_schema.sql  00019_registration_function.sql  00020_profile_role_title.sql  00021_owner_type_and_trial.sql  00022_bootstrap_super_admin.sql  00023_system_announcements.sql  00024_feature_flags.sql  00025_activity_logs_security_indexes.sql  (+61 more)
(+726 files in other folders)
