[package]
name = "analytics-engine"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
